# timelog-extract

./: .coderabbit.yaml  .env.briox.example  .gitignore  AGENTS.md  BRANCH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GLOBAL_TIMELOG_AUTOMATION.md  LICENSE  NOTE_LINE_LIMIT.md  README.md  VISION.md  briox_connection_test.py  decisions-march.json  gittan.html  gui_preview.html  march_invoice_ground_truth.json  pyproject.toml  site.webmanifest  timelog_extract.py  timelog_projects.backup.20260429-102020.json  timelog_projects.example.json  timelog_projects.json.marcus
.claude/: settings.json
.github/: FUNDING.yml  pull_request_template.md
.jules/: bolt-instructions.md  bolt.md  palette.md  sentinel.md
ax-admin/: .env.example  config.py  database.py  main.py  models.py  requirements.txt
collectors/: __init__.py  ai_logs.py  antigravity.py  calendar.py  chrome.py  claude_desktop_events.py  conductor.py  copilot_cli.py  cursor.py  cursor_agent_turns.py  cursor_composer.py  cursor_glass_meta.py  cursor_log_scan.py  git_commits.py  github.py  jira.py  lovable_cache.py  lovable_desktop.py  lovable_merge.py  mail.py  timelog.py  timely_memory.py  toggl.py  vscode.py  vscode_chat.py  vscode_fork.py  windsurf.py  zed.py  zed_db.py
core/: __init__.py  analytics.py  analytics_weekly.py  anchor_nudge.py  anchor_plan.py  cache_evidence_health.py  calendar_suggest.py  chrome_epoch.py  chromium_cache.py  cli.py  cli_ab_rule_suggestions.py  cli_app.py  cli_calendar_suggest.py  cli_cast.py  cli_config.py  cli_date_range.py  cli_deprecation.py  cli_doctor_sources_projects.py  cli_evidence.py  cli_experiments.py  cli_global_timelog_setup.py  cli_jira_sync.py  cli_map.py  cli_options.py  cli_projects.py  cli_projects_audit.py  cli_prompts.py  cli_report_status.py  cli_report_status_helpers.py  cli_reported.py  cli_review.py  cli_review_create_project.py  cli_review_gaps.py  cli_review_remotes.py  cli_review_uncategorized.py  cli_search.py  cli_sources.py  cli_status.py  cli_status_history.py  cli_toggl_sync.py  (+107 more)
cursor-extension/: README.md  package-lock.json  package.json  tsconfig.json
docs/: ACCURACY_PLAN.md  AGENTIC_EVALUATION.md  AGENT_TASK_HANDOVER_PROMPT.md  AI_ASSISTED_CONFIG.md  AI_ORCHESTRATION_SOURCE_ESTIMATION_LEARNINGS.md  CASE_STUDY.md  CI.md  CLI_FIRST_V1_RELEASE_CHECKLIST.md  GITHUB_SPONSORS_PROFILE.md  GITTAN_NORTHSTAR_METRICS.md  GITTAN_VISION.md  GITTAN_VISION_EN.md  LAUNCH_REVIEW_2026_04_11.md  LICENSE_DECISION_MATRIX.md  LICENSE_GOALS.md  LINKEDIN_PILOT_POSTS.md  MANUAL_TEST_MATRIX_0_2_x.md  OPPORTUNITIES.md  PATREON_POSITIONING.md  PRIVATE_LOCAL_NOTES.md  README.md  RELEASE_SCOPE_0.2.3.md  RISK_PATTERNS_FROM_UPSTREAM.md  SIMILAR_REPOS_CHECKLIST.md  SIMPLE_INVOICING_MODEL.md  SOURCES_AND_FLAGS.md  SPONSORSHIP_TERMS.md  TERMINAL_I18N.md  TERMINAL_STYLE_GUIDE.md  V1_FINISH_PLAN.md  V1_SCOPE.md  V1_TAG_ANNOTATION_DRAFT.md  VERSIONING.md  VISION_DOCUMENTS.md  WORKLOG_FIRST_STRATEGY_PLAN.md  agent-task-handover-prompt.md  ai-assisted-config.md  ci.md  cli-first-v1-release-checklist.md  documentation-structure.md  (+19 more)
friend_trial/: FEEDBACK_TEMPLATE.md
outputs/: __init__.py  cast_writer.py  cli_heroes.py  gittan_banner.py  html_timeline.py  narrative.py  pdf.py  terminal.py  terminal_breakdown.py  terminal_history.py  terminal_preview.py  terminal_report_sections.py  terminal_theme.py  terminal_warnings.py
scripts/: __init__.py  attribution_diff.sh  bench_hotpath.py  bench_synth_data.py  build_brand_assets.sh  check_docs_no_client_data.py  check_file_lengths.py  cli_impact_smoke.sh  compare_gittan_versions.sh  compare_project_configs.py  compare_screen_time_gap.py  contributor_setup_scenarios.sh  diag_cursor_git_timing.py  docs_to_issues.py  eval_accuracy.py  external_pr_triage_classify.py  friend_trial.py  gap_day_triage.py  generate_feature_inventory.py  git_worktree.sh  gittan_data_autocommit.sh  gittan_statusline.py  install-hooks.sh  live_terminal_demo_server.py  manual_matrix_automation.py  migrate_project_worklogs.py  prepare_static_site.sh  rabbit_board.py  rabbit_board_sync.sh  rabbit_handoff.sh  rabbit_loop.sh  rabbit_workflow_context.sh  rabbit_workflow_context_chat.py  rabbit_workflow_hygiene.sh  render_ledger_sidebyside.py  review_stats.py  run_autotests.sh  run_cli_experiments_ci.py  run_cli_experiments_ci.sh  run_engine_report.py  (+9 more)
tests/: chrome_test_support.py  cli_output_helpers.py  event_helpers.py  test_agents_business_data_policy.py  test_agents_timelog_policy.py  test_analytics_weekly.py  test_anchor_nudge.py  test_anchor_plan_guardrail.py  test_attendance_classification.py  test_backward_compat_wrappers.py  test_bench_harness.py  test_calendar_code_classification.py  test_calendar_suggest.py  test_cast_writer.py  test_check_docs_no_client_data.py  test_check_file_lengths.py  test_chrome.py  test_chrome_collect.py  (+187 more)
(+291 files in other folders)
