[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timelog-extract"
version = "0.2.2"
description = "Aggregate local work activity from Gemini, Claude, Cursor, OpenAI Codex IDE, Chrome, Mail, worklog, optional GitHub public activity, and optional Screen Time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "reportlab>=4.0.0",
  "typer[all]",
  "rich",
  "questionary"
]

[project.scripts]
gittan = "timelog_extract:main"
timelog-extract = "timelog_extract:main"
timelog-friend-trial = "scripts.friend_trial:main"

[tool.setuptools.packages.find]
include = ["collectors*", "core*", "scripts*"]

[tool.setuptools]
py-modules = ["timelog_extract"]
