[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timelog-extract"
version = "0.2.8"
description = "Aggregate local work activity from Gemini, Claude, Cursor, OpenAI Codex IDE, Chrome, Mail, worklog, optional GitHub public activity, and optional Screen Time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "reportlab>=4.0.0",
  "typer[all]",
  "rich",
  "questionary"
]

[project.urls]
Homepage = "https://gittan.sh"
Repository = "https://github.com/mbjorke/timelog-extract"
Issues = "https://github.com/mbjorke/timelog-extract/issues"

[project.scripts]
gittan = "timelog_extract:main"
timelog-extract = "timelog_extract:main"

[tool.setuptools.packages.find]
include = ["collectors*", "core*", "outputs*", "scripts*"]

[tool.setuptools]
py-modules = ["timelog_extract"]
