[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timelog-extract"
version = "0.2.20"
description = "Aggregate local work activity from Gemini, Claude, Cursor, OpenAI Codex IDE, Chrome, Mail, worklog, optional GitHub public activity, and optional Screen Time."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "reportlab>=4.0.0",
  "typer",
  # core/cli_report_status.py imports click directly. Typer 0.26 dropped its
  # hard click dependency, so we must declare it ourselves or CLI imports fail.
  "click>=8.0",
  "rich",
  "questionary",
  # Chromium cache-backed sources (Claude Desktop Code=zstd, Lovable=brotli).
  # Zed AI chat uses zstd compression.
  "zstandard>=0.21",
  "brotli>=1.1",
]

[project.optional-dependencies]
# Backward compat: codecs ship as default deps since 0.2.20.
cache-evidence = []
dev = [
  "ruff>=0.9",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
  "build",
  "dist",
  "cursor-extension",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
]
ignore = [
  # Scripts and tests often adjust sys.path before imports.
  "E402",
]

[tool.ruff.lint.per-file-ignores]
# Backward-compat re-exports (public API surface) — imports look "unused".
"timelog_extract.py" = ["F401", "I001"]
"core/github_slug_match.py" = ["F401"]
"core/mapping_review.py" = ["F401"]
# Near the 500-line repo cap: keep compact imports (isort expansion breaks the cap).
"core/cli_triage.py" = ["I001"]
"core/report_service.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["collectors", "core", "outputs"]
combine-as-imports = true

[project.urls]
Homepage = "https://gittan.sh"
Repository = "https://github.com/mbjorke/timelog-extract"
Issues = "https://github.com/mbjorke/timelog-extract/issues"

[project.scripts]
gittan = "timelog_extract:main"
timelog-extract = "timelog_extract:main"

[tool.setuptools.packages.find]
include = ["collectors*", "core*", "outputs*", "scripts*"]

[tool.setuptools]
py-modules = ["timelog_extract"]
